# ScMa

./: .gitignore  CHANGES.md  PLAN.md  README.md  ScMa.files  ScMa.includes  TODO.md  build  buildandrun  debug_log.txt  default.cfg  disclaimer.txt  gdb_schizomania_unix  log.txt  schizomania_client.bat  schizomania_server.bat  schizomania_unix  scma.rc  server.bat
backup/media/map/: alphacorp.cfg  complex.cfg
bin_unix/: native_client  native_server
build-src-CMake-Default/: CMakeCache.txt  Makefile  SchizoMania.cbp  cmake_install.cmake  compile_commands.json
build-src-CMake-Default/enet/: Makefile  cmake_install.cmake  enet.cbp
build-src-CMake-Default/engine/: Makefile  SchizoMania_Engine.cbp  cmake_install.cmake
build-src-CMake-Default/game/: Makefile  SchizoMania_Game.cbp  cmake_install.cmake
build-src-CMake-Default/shared/: Makefile  SchizoMania_Shared.cbp  cmake_install.cmake
build-src-CMake-Default/shared/entities/: Makefile  cmake_install.cmake
builds/: SchizoMania_Client  cmake_install.cmake  schizomania_unix
builds.2/: CMakeCache.txt  Makefile  SchizoMania_Client  compile_commands.json
builds.2/enet/: cmake_install.cmake
builds.2/engine/: Makefile  cmake_install.cmake
builds.2/game/: cmake_install.cmake
builds.2/media/map/: base.json  door.json  door2.json  door3.json  playerstart.json
builds.2/shared/: Makefile
builds/config/: default.cfg
builds/enet/: Makefile
builds/game/: Makefile
builds/media/map/: json.json  testb.json
builds/shared/: cmake_install.cmake
cmake/: FindModplug.cmake  FindSDL2.cmake
config/: default.cfg  default_map_settings.cfg  game.cfg  init.cfg  restore.cfg  saved.cfg  server-init.cfg
config/ui/: common.cfg
config/ui/hud/: editvars.cfg
config/ui/menus/: cci.cfg  controls.cfg  credits.cfg  main.cfg  player_setup.cfg
dev_docs/: Story_Chapter_1.txt  doors_red_eclipse  entities  howtoeditcube.txt  mapeditorbindings.txt  prototype_art_list  prototype_concept
game/: Makefile  SchizoMania_Game.cbp  cmake_install.cmake  game.h  render.cpp
game/entities/: baseentity.cpp  dynamiclight.h
ide_projects/: scma.cbp
ide_projects/QTCreator/: ScMa.files
media/map/: b.json  base.ogz  base_.json  darkness.json  darkness.ogz  dlight.json  door.json  door.ogz  door2.json  door3.json  door4.json  json.json  json_b.json  json_c.json  json_d.json  json_e.json  json_f.json  json_g.json  kanker.json  kanker2.json  kanker2.ogz  kanker3.json  kanker3_2019-10-22_03.46.10.BAK  kanker_2019-10-21_21.09.09.BAK  micha.json  micha.ogz  new.json  player.json  playerstart.json  playerstart.ogz  redoor2.json  scale.json  test.json  test_b.json  tester.json  waterworks.cfg  x.json  x.ogz
media/model/player/: hud_pistol-reload.md5anim  hud_pistol-shoot2.md5anim
media/model/player_redeclipse/: claw_idle.iqm  hud_flamer-idle.md5anim  hud_grenade-shoot.md5anim
media/model/playerxx/: claw_primary.iqm  crouch.iqm  grenade_idle.iqm  grenade_power.iqm  grenade_primary.iqm  hud_grenade-idle.md5anim  hud_grenade-power.md5anim  hud_grenade-reload.md5anim  hud_mine-idle.md5anim  hud_mine-reload.md5anim  hud_pistol-idle.md5anim  hud_plasma-idle.md5anim  hud_plasma-shoot2.md5anim  hud_rocket-idle.md5anim  hud_shotgun-idle.md5anim  hud_shotgun-reload.md5anim  hud_shotgun-shoot1.md5anim  hud_smg-idle.md5anim  hwep.cfg  mine_pose.iqm  mine_shoot.iqm  reload_pistol.iqm  rifle_idle.iqm  rifle_power.iqm  rifle_primary.iqm  rifle_reload.iqm  rocket_shoot.iqm  sg_primary.iqm  smg_reload.iqm  (+2 more)
src/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  Makefile  SchizoMania.cbp.files  SchizoMania.cbp.includes  SchizoMania_Client  cmake_install.cmake  compile_commands.json  schizomania
src/binding/: .gitignore  CMakeLists.txt  index.py
src/binding/autobind/: compileflags.py  fileiterator.py  parsecpp.py
src/binding/autobind/cppmodel/: CxxClass.py  CxxFunction.py  CxxInclude.py  CxxNode.py  CxxVariable.py
src/binding/autobind/generator/: CubeScriptBinding.py
src/enet/: CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake  enet.cbp  enet.dsp  enet_dll.cbp  protocol.c
src/enet/include/enet/: enettime.h
src/enetcc/: CMakeLists.txt  Makefile
src/engine/: CMakeLists.txt  Makefile  SchizoMania_Engine.cbp  aa.cpp  animmodel.h  bih.cpp  bih.h  blend.cpp  client.cpp  cmake_install.cmake  command.cpp  console.cpp  dynlight.cpp  engine.h  engine.h.autosave  grass.cpp  help.cpp  help.h  iqm.h  light.cpp  log.cpp  log.h  main.cpp  master.cpp  material.cpp  md2.h  md3.h  md5.h  menus.cpp  model.h  movie.cpp  mpr.h  normal.cpp  obj.h  octa.cpp  octa.h  octaedit.cpp  octarender.cpp  pch.cpp  physics.cpp  (+27 more)
src/game/: CMakeLists.txt  Makefile  SchizoMania_Game.cbp  ai.cpp  client.cpp  cmake_install.cmake  commands.cpp  ctf.h  entities.cpp  entities.h  extinfo.h  game.cpp  game.h  render.cpp  render.cpp.autosave  scoreboard.cpp  server.cpp  server.cpp.autosave  server.h  waypoint.cpp
src/game/entities/: baseentity.cpp  baseentity.h  basemapmodel.cpp  basemapmodel.h  basemapmodel.h.autosave  basemapmodelentity.cpp  basemapmodelentity.h  basemodel.cpp  basemodel.h  basemonster.cpp  basemonster.h  door.cpp  door.cpp.autosave  door.h  dynamiclight.cpp  dynamiclight.h  player.cpp  player.h  playerstart.cpp  playerstart.h
src/oldgame/: ai.cpp  aiman.h  client.cpp  ctf.h  entities.cpp  render.cpp  weapon.cpp
src/oldgame/entities/: dynamiclight.cpp
src/server/: master.cpp
src/shared/: CMakeLists.txt  Makefile  SchizoMania_Shared.cbp  cmake_install.cmake  command.h  crypto.cpp  cube.h  cube.h.autosave  dynent.cpp  ents.h  geom.cpp  geom.h  glemu.cpp  iengine.h  igame.h  pch.cpp  physent.cpp  physent.cpp.autosave  stream.cpp  tools.cpp  tools.h  zip.cpp
src/shared/entities/: CMakeLists.txt  animinfo.h  attributes.cpp  attributes.h  basedynamicentity.cpp  basedynamicentity.h  baseentity.cpp  baseentity.h  basephysicalentity.cpp  basephysicalentity.h  coreentity.cpp  coreentity.h  dynent.cpp  dynent.cpp.autosave  dynent.h  entityfactory.cpp  entityfactory.h  physent.cpp  physent.h
src/xcode/: Launcher.m  main.m  tesseract.plist.in
(+101 files in other folders)
